--- a/package.json
+++ b/package.json
@@ -9,47 +9,72 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": ["onStartupFinished"],
+  "activationEvents": [
+    "onStartupFinished"
+  ],
   "main": "./out/extension.js",
   "contributes": {
-    "commands": [{
-      "command": "my-first-extension.popUp",
-      "title": "popUp"
-    } , {
-      "command": "my-first-extension.pausePopUps",
-      "title": "pausePopUps"
-    } , {
-      "command": "my-first-extension.startPopUps",
-      "title": "startPopUps"
-    } , {
-      "command": "my-first-extension.updateSettings",
-      "title": "updateSettings"
-    }
-  ], 
-  "configuration": {
-    "title": "devPace",
-    "properties": {
-      "devPace.userName": {
-        "type": "string",
-        "default": "Tech Wizard",
-        "description": "Name of the extension user."
+    "commands": [
+      {
+        "command": "my-first-extension.popUp",
+        "title": "popUp"
       },
-      "devPace.breakDuration": {
-        "type": "number",
-        "default": 10,
-        "description": "Break duration in minutes."
+      {
+        "command": "my-first-extension.pausePopUps",
+        "title": "pausePopUps"
       },
-      "devPace.workTime": {
-        "type": "number",
-        "default": 60,
-        "description": "Number of minutes of work without any breaks."
+      {
+        "command": "my-first-extension.startPopUps",
+        "title": "startPopUps"
       },
-      "devPace.configured": {
-        "type": "boolean",
-        "default": false,
-        "description": "True once the user has chosen settings."
+      {
+        "command": "my-first-extension.updateSettings",
+        "title": "updateSettings"
       }
-  }}},
+    ],
+    "configuration": {
+      "title": "devPace",
+      "properties": {
+        "devPace.userName": {
+          "type": "string",
+          "default": "Tech Wizard",
+          "description": "Name of the extension user."
+        },
+        "devPace.breakDuration": {
+          "type": "number",
+          "default": 10,
+          "description": "Break duration in minutes."
+        },
+        "devPace.workTime": {
+          "type": "number",
+          "default": 60,
+          "description": "Number of minutes of work without any breaks."
+        },
+        "devPace.configured": {
+          "type": "boolean",
+          "default": false,
+          "description": "True once the user has chosen settings."
+        },
+        "devPace.encouragementStyle": {
+          "type": "string",
+          "default": "Supportive Friend",
+          "enum": [
+            "Motivational Coach",
+            "Friendly Colleague",
+            "Zen Master",
+            "Cheerleader",
+            "Inspiring Leader",
+            "Supportive Friend"
+          ]
+        },
+        "devPace.anthropicApiKey": {
+          "type": "string",
+          "default": "",
+          "description": "Anthropic API Key for generating encouragement messages"
+        }
+      }
+    }
+  },
   "scripts": {
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
@@ -59,14 +84,17 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/vscode": "^1.96.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
+    "@types/vscode": "^1.96.0",
     "@typescript-eslint/eslint-plugin": "^8.17.0",
     "@typescript-eslint/parser": "^8.17.0",
-    "eslint": "^9.16.0",
-    "typescript": "^5.7.2",
     "@vscode/test-cli": "^0.0.10",
-    "@vscode/test-electron": "^2.4.1"
+    "@vscode/test-electron": "^2.4.1",
+    "eslint": "^9.16.0",
+    "typescript": "^5.7.2"
+  },
+  "dependencies": {
+    "axios": "^1.7.9"
   }
 }
